<resources>
    <string name="app_name">RIHNet Logistik</string>
    <string name="title_warenausgang">Warenausgang</string>
    <string name="title_pakete">Pakete</string>
    <string name="title_wareneingang">Wareneingang</string>
    <string name="title_freierwareneingang">Freier Wareneingang</string>
    <string name="title_wareneingangbestellbezug">Wareneingang mit Bestellbezug</string>
    <string name="title_umlagerung">Umlagerung</string>
    <string name="title_inventur">Inventur</string>
    <string name="title_paketlabel">Paketlabel</string>
    <string name="title_inventur_erfassung">Inventur-Erfassung</string>
    <string name="title_verbindungen_testen">Verbindungen testen</string>
    <string name="title_artikelinfo">Artikelinfo</string>
    <string name="title_infokorrektur">Info &amp; Korrektur</string>
    <string name="title_info">INFO</string>
    <string name="title_ziellager">Ziellager</string>
    <string name="title_zur_queue_hinzufuegen">ZUR QUEUE HINZUFÜGEN</string>
    <string name="title_zu_gebucht_hinzufuegen">ZU GEBUCHT HINZUFÜGEN</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="title_seriennummer">Seriennummer</string>
    <string name="title_login">Login</string>
    <string name="title_charge">Charge</string>
    <string name="title_umlagern">Umlagern</string>
    <string name="title_artikel">ARTIKEL</string>
    <string name="title_lager">LAGER</string>
    <string name="title_leistungen">LEISTUNGEN</string>
    <string name="title_beleg">BELEG</string>
    <string name="title_queue">QUEUE</string>
    <string name="title_log">LOG</string>
    <string name="title_offen">OFFEN</string>
    <string name="title_artikel_buchen">ARTIKEL BUCHEN</string>
    <string name="title_gebucht">GEBUCHT</string>
    <string name="title_lagerplatzinfo">Lagerplatzinfo</string>
    <string name="title_lagerplatzinfo2">Lagerplatz Info</string>
    <string name="title_artikelzubuchen">Artikel zubuchen</string>
    <string name="title_artikelabbuchen">Artikel abbuchen</string>
    <string name="preferenceCategory_mitarbeiter">Mitarbeiter</string>
    <string name="preference_mitarbeiternummer">Nummer</string>
    <string name="preferenceCategory_allgemein">Allgemein</string>
    <string name="preference_standort">Standort</string>
    <string name="preference_druckplatz">Druckplatz</string>
    <string name="preferenceCategory_sql">SQL</string>
    <string name="preference_ipadresse">IP-Adresse</string>
    <string name="preference_port">Port</string>
    <string name="preference_datenbank">Datenbank</string>
    <string name="preference_instance">Server-Instanz</string>
    <string name="preference_benutzername">Benutzername</string>
    <string name="preference_kennwort">Kennwort</string>
    <string name="preferenceCategory_selectLineApi">SelectLine API</string>
    <string name="preference_appkey">AppKey</string>
    <string name="preference_baseaddress">BaseAddress</string>
    <string name="preference_username">UserName</string>
    <string name="preference_password">Password</string>
    <string name="preferenceCategory_druckvorlagen">Druckvorlagen</string>
    <string name="preference_lieferschein">Lieferschein</string>
    <string name="preference_rechnung">Rechnung</string>
    <string name="preferenceCategory_warenausgang">Warenausgang</string>
    <string name="preference_belegtypen">Belegtypen</string>
    <string name="preference_sortierung">Sortierung</string>
    <string name="preference_druckausgabe">Druckausgabe</string>
    <string name="preference_belege_verarbeiten">nur komplette Belege verarbeiten</string>
    <string name="preference_paketanbindung">Paketanbindung</string>
    <string name="preference_paketanbindung_summary">Tabelle [XPaketanbindung] erforderlich</string>
    <string name="preference_autoworker">RIHNet-AutoWorker</string>
    <string name="preferenceCategory_wareneingangbestellbezug">Wareneingang mit Bestellbezug</string>
    <string name="preference_wareneingangbestellbezug">alle Bestellungen des Lieferanten verarbeiten</string>
    <string name="preferenceCategory_umlagerung">Umlagerung</string>
    <string name="preference_adressnummer">Adressnummer</string>
    <string name="preferenceCategory_paketlabel">Paketlabel</string>
    <string name="preference_paketlabel_belegtypen">Belegtypen</string>
    <string name="menu_einstellungen">Einstellungen</string>
    <string name="menu_info">Info</string>
    <string name="menu_test">Verbindungen testen</string>
    <string name="menu_logout">Abmelden</string>
    <string name="menu_suchen">Suchen…</string>
    <string name="btn_weiter">WEITER</string>
    <string name="btn_queue">ZUR QUEUE HINZUFÜGEN</string>
    <string name="btn_wareneingang">WARENEINGANG ANLEGEN</string>
    <string name="btn_beleg_verarbeiten">VERARBEITEN</string>
    <string name="btn_pakete">PAKETE %1$d</string>
    <string name="btn_paket">PAKET %1$d</string>
    <string name="btn_verwalten">PAKETE</string>
    <string name="btn_hinzufuegen">HINZUFÜGEN</string>
    <string name="btn_testen">TESTEN</string>
    <string name="btn_erfassen">ERFASSEN</string>
    <string name="btn_drucken">DRUCKEN</string>
    <string name="btn_buchen">BUCHEN</string>
    <string name="btn_reset">RESET</string>
    <string name="btn_print">DRUCKEN</string>
    <string name="btn_delete">LÖSCHEN</string>
    <string name="btn_abbrechen">ABBRECHEN</string>
    <string name="btn_anmelden">ANMELDEN</string>
    <string name="btn_ok">OK</string>
    <string name="btn_beenden">BEENDEN</string>
    <string name="btn_umlagern">UMLAGERN</string>
    <string name="btn_foto">FOTO</string>
    <string name="rb_sqlserver">SQL-Server</string>
    <string name="rb_selectlineapi">SelectLine-API</string>
    <string name="chk_auto_mode">AUTO</string>
    <string name="info_rihnet_link">https://rihnet.at/</string>
    <string name="info_versionnummer">%1$d</string>
    <string name="info_versionname">%1$s</string>
    <string name="info_versionname_label">Versionname:</string>
    <string name="info_versionnummer_label">Versionnummer:</string>
    <string name="info_contentDescription_rihnetLogo">RIHNet-Logo</string>
    <string name="splash_description_logo">--.--.----</string>
    <string name="title_activity_umlagerung">UmlagerungActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="artikel_artikelnummer">Artikelnummer:</string>
    <string name="artikel_gewicht">Gewicht:</string>
    <string name="artikel_wert">Wert:</string>
    <string name="artikel_belegnummer">Belegnummer:</string>
    <string name="artikel_artikelnr">Artikelnr.:</string>
    <string name="artikel_bezeichnung">Bezeichnung:</string>
    <string name="artikel_zusatz">Zusatz:</string>
    <string name="artikel_hstartikelnummer">HstArtikelnr.:</string>
    <string name="artikel_eannummer">EAN:</string>
    <string name="artikel_menge">Menge:</string>
    <string name="artikel_menge_offen">Menge | Offen:</string>
    <string name="artikel_bestand">Bestand:</string>
    <string name="artikel_lager">Lager:</string>
    <string name="artikel_lagerplatz">Lagerplatz:</string>
    <string name="artikel_seriecharge">SerieCharge:</string>
    <string name="artikel_seriennummer">Seriennummer:</string>
    <string name="artikel_paket">Paket:</string>
    <string name="artikel_seriennr">Seriennummer</string>
    <string name="artikel_charge">Charge:</string>
    <string name="artikel_select_seriennummer_contentDescription">Seriennummer auswählen</string>
    <string name="artikel_select_charge_contentDescription">Charge auswählen</string>
    <string name="artikel_hint_artikelnummer">Artikelnr., Seriennr.,…</string>
    <string name="artikel_hint_menge">Menge</string>
    <string name="artikel_fab_contentDescription">Artikel hinzufügen</string>
    <string name="pakete_nummer"># %1$d</string>
    <string name="pakete_gewicht">%1$.2f kg</string>
    <string name="pakete_wert">€ %1$.2f</string>
    <string name="pakete_contentDescription">Collapse|Expand</string>
    <string name="header_beleg">BELEG</string>
    <string name="header_lieferbedingung">LIEFERBEDINGUNG</string>
    <string name="header_verarbeitungskennzeichen">VERARBEITUNGSKENNZEICHEN</string>
    <string name="header_paketanbindung">PAKETANBINDUNG</string>
    <string name="header_pakete">PAKETE</string>
    <string name="header_kunde">KUNDE</string>
    <string name="header_lieferadresse">ABWEICHENDE LIEFERADRESSE</string>
    <string name="beleg_belegtyp">Belegtyp:</string>
    <string name="beleg_belegnummer">Belegnummer:</string>
    <string name="beleg_datum">Datum:</string>
    <string name="beleg_adressnummer">Adressnummer:</string>
    <string name="beleg_anzeigename">Anzeigename:</string>
    <string name="beleg_lieferbedingung">Lieferbedingung:</string>
    <string name="beleg_lieferscheine">Lieferscheine:</string>
    <string name="beleg_lieferscheine_drucken">Lieferscheine drucken:</string>
    <string name="beleg_rechnungen">Rechnungen:</string>
    <string name="beleg_rechnungen_drucken">Rechnungen drucken:</string>
    <string name="beleg_autorechnung">autom. Rechnung erstellen:</string>
    <string name="beleg_bezeichnung">Bezeichnung:</string>
    <string name="beleg_id">ID:</string>
    <string name="beleg_pakete">Pakete:</string>
    <string name="beleg_zusatz">Zusatz:</string>
    <string name="beleg_name">Name:</string>
    <string name="beleg_strasse">Strasse:</string>
    <string name="beleg_plz">Plz:</string>
    <string name="beleg_ort">Ort:</string>
    <string name="beleg_land">Land:</string>
    <string name="belegpositionen_offen_contentDescription">Belegpositionen-Offen</string>
    <string name="belegpositionen_gebucht_contentDescription">Belegpositionen-Gebucht</string>
    <string name="belegpositionen_leistungen_contentDescription">Belegpositionen-Leistungen</string>
    <string name="queue_lagerlagerplatz">Lager | -platz:</string>
    <string name="queue_pipe">|</string>
    <string name="queue_contentDescription">Queue Items</string>
    <string name="beleg_lager">Lager:</string>
    <string name="beleg_lagerplatz">Lagerplatz:</string>
    <string name="beleg_lieferant">Lieferant:</string>
    <string name="beleg_bestellung">Bestellung:</string>
    <string name="beleg_lsnr">LS-Nr.:</string>
    <string name="beleg_lieferscheinnummer">Lieferschein-Nr.</string>
    <string name="lager_lager">Lager:</string>
    <string name="lager_quellager">Quellager:</string>
    <string name="lager_ziellager">Ziellager:</string>
    <string name="lager_lagerplatz">Lagerplatz:</string>
    <string name="lager_grund">Grund:</string>
    <string name="inventur_belegnummer">Belegnummer:</string>
    <string name="inventur_inventurtyp">Typ:</string>
    <string name="inventur_inventurstatus">Status:</string>
    <string name="inventur_bemerkung">Bemerkung:</string>
    <string name="verbindung_pruefen__contentDescription_status_ok">Status-Icon-OK</string>
    <string name="verbindung_pruefen__contentDescription_status_error">Status-Icon-Error</string>
    <string name="target_lager">Lager:</string>
    <string name="target_menge">Menge:</string>
    <string name="prompt_benutzer">Benutzer</string>
    <string name="prompt_passwort">Passwort</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Willkommen,"</string>
    <string name="invalid_username">Kein gültiger Benutzer!</string>
    <string name="invalid_password">Passwort ist nicht korrekt!</string>
    <string name="login_failed">"Login fehlgeschlagen!"</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="text_nodata">Keine Daten verfügbar!</string>
    <string name="text_artikel_suchen">Artikelnummer, EAN,… eingeben!</string>
</resources>