<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/preferenceCategory_sql">

        <EditTextPreference
            app:key="ipadresse"
            app:title="@string/preference_ipadresse"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="port"
            app:title="@string/preference_port"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="datenbank"
            app:title="@string/preference_datenbank"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="instance"
            app:title="@string/preference_instance"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="benutzername"
            app:title="@string/preference_benutzername"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="kennwort"
            app:title="@string/preference_kennwort"
            android:inputType="textPassword"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/preferenceCategory_selectLineApi">

        <EditTextPreference
            app:key="appkey"
            app:title="@string/preference_appkey"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="baseaddress"
            app:title="@string/preference_baseaddress"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="username"
            app:title="@string/preference_username"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="password"
            app:title="@string/preference_password"
            android:inputType="textPassword"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/preferenceCategory_umlagerung">

        <EditTextPreference
            app:key="standort"
            app:title="@string/preference_standort"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="adressnummer"
            app:title="@string/preference_adressnummer"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>