<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:id="@+id/iv_rihnet_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:contentDescription="@string/info_contentDescription_rihnetLogo"
        android:src="@drawable/rihnet_logo_path" />

    <TextView
        android:id="@+id/tv_rihnet_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:padding="16dp"
        android:text="@string/info_rihnet_link"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBodyMedium" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                android:id="@+id/tv_versionnummer_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:text="@string/info_versionnummer_label"
                android:textAppearance="?attr/textAppearanceBodyMedium" />

            <TextView
                android:id="@+id/tv_versionnummer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?attr/colorPrimary"
                tools:text="---" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tv_versionname_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:paddingEnd="16dp"
                android:text="@string/info_versionname_label"
                android:textAppearance="?attr/textAppearanceBodyMedium" />

            <TextView
                android:id="@+id/tv_versionname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?attr/colorPrimary"
                tools:text="---" />
        </TableRow>
    </TableLayout>

</LinearLayout>